--- a/net-im/kopete/ChangeLog
+++ b/net-im/kopete/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-im/kopete
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/kopete/ChangeLog,v 1.2 2002/06/12 10:29:07 guidob Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/kopete/ChangeLog,v 1.3 2002/06/18 09:53:58 bangert Exp $
+
+*kopete-0.4.1 (18 Jun 2002)
+
+  18 Jun 2002; Thilo Bangert <bangert@gentoo.org> kopete-0.4.1.ebuild
+  
+  version bump
+  
 
 *kopete-4 (12 Jun 2002)
 
