--- a/net-mail/procmail/ChangeLog
+++ b/net-mail/procmail/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/procmail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/procmail/ChangeLog,v 1.2 2002/05/04 01:15:49 jhhudso Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/procmail/ChangeLog,v 1.3 2002/06/18 14:40:42 g2boojum Exp $
+
+  18 Jun 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  Thanks to Jose Fonseca procmail now uses /etc/procmailrc to determine the
+  default mailbox instead of patching the source.
 
 *procmail-3.22-r1 (1 Feb 2002)
   3 May 2002; J.Hudson <jhhudso@gentoo.org> procmail-3.22-r1.ebuild :
