--- a/x11-terms/multi-gnome-terminal/ChangeLog
+++ b/x11-terms/multi-gnome-terminal/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-terms/multi-gnome-terminal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.8 2002/06/16 03:09:37 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.9 2002/06/18 17:18:57 azarah Exp $
+
+  18 Jun 2002; Martin Schlemmer <azarah@gentoo.org> multi-gnome-terminal-1.5.0.ebuild :
+
+  I forgot ages ago to remove the pkg_postinst() message, as the docs and
+  keybindings is fixed now.
 
 *multi-gnome-terminal-1.5.0 (16 Jun 2002)
 
