--- a/app-misc/gfontview/ChangeLog
+++ b/app-misc/gfontview/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/gfontview
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gfontview/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gfontview/ChangeLog,v 1.2 2002/06/18 18:32:18 seemant Exp $
+
+*gfontview-0.5.0-r3 (18 Jun 2002)
+
+  18 Jun 2002; Seemant Kulleen <seemant@gentoo.org>
+  gfontview-0.5.0-r3.ebuild files/digest-gfontview-0.5.0-r3 :
+
+  fixed sandbox violation, and added SLOT and LICENSE
 
 *gfontview-0.5.0-r2 (1 Feb 2002)
 
