--- a/net-irc/erc/ChangeLog
+++ b/net-irc/erc/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/erc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-irc/erc/ChangeLog,v 1.1 2002/05/01 17:36:26 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/erc/ChangeLog,v 1.2 2002/06/18 20:58:27 rphillips Exp $
+
+*erc-2.93 (18 Jun 2002)
+
+  18 Jun 2002; Ryan Phillips <rphillips@gentoo.org> erc-2.93.ebuild :
+
+  Updated version
 
 *erc-2.92 (1 May 2002)
 
