--- a/app-text/latex2html/ChangeLog
+++ b/app-text/latex2html/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/latex2html
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/latex2html/ChangeLog,v 1.2 2002/04/27 09:22:19 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/latex2html/ChangeLog,v 1.3 2002/06/18 22:01:49 danarmak Exp $
+
+*latex2html-2002.1 (18 Jun 2002)
+
+  18 Jun 2002; Dan Armak <danarmak@gentoo.org> ChangeLog  :
+
+  New version (2002-1). Also fixes #3437 (fail on missing /usr/share/latex2html
+  dir). Thanks a lot to Ben Cornett for the submission.
 
 *latex2html-2002 (27 Apr 2002)
 
