--- a/app-editors/forte/ChangeLog
+++ b/app-editors/forte/ChangeLog
@@ -1,13 +1,20 @@
 # ChangeLog for app-editors/forte
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-editors/forte/ChangeLog,v 1.1 2002/06/14 19:45:31 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/forte/ChangeLog,v 1.2 2002/06/19 02:57:17 karltk Exp $
+
+*forte-3.0-r1 (19 Jun 2002)
+
+  19 Jun 2002; Karl Trygve Kalleberg <karltk@gentoo.org> forte-3.0-r1.ebuild files/digest-forte-3.0-r1:
+
+  The Forte environment file overrode the system's JDK_HOME environment 
+  variable. Has now been removed.
+
+  Removed forte-3.0.ebuild files/digest-forte-3.0
 
 *forte-3.0 (14 June 2002)
 
   14 June 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
   
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+  Initial import.
+
+  Ebuild submitted by Don Seiler <don@seiler.us>.
