--- a/media-libs/gdk-pixbuf/ChangeLog
+++ b/media-libs/gdk-pixbuf/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/gdk-pixbuf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gdk-pixbuf/ChangeLog,v 1.10 2002/06/05 14:07:30 doctomoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gdk-pixbuf/ChangeLog,v 1.11 2002/06/19 09:12:56 stroke Exp $
+
+*gdk-pixbuf-0.18.0 (19 Jun 2002)
+
+  19 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> gdk-pixbuf-0.18.0.ebuild:
+
+  Version bump.
 
 *gdk-pixbuf-0.17.0 (05 Jun 2002)
 
