--- a/x11-misc/asclock/ChangeLog
+++ b/x11-misc/asclock/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for x11-wm/asclock
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/asclock/ChangeLog,v 1.3 2002/04/14 08:43:10 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/asclock/ChangeLog,v 1.1 2002/06/19 14:36:12 karltk Exp $
 
 *asclock-2.0.12 (14 Apr 2002)
 
