--- a/media-sound/esound/ChangeLog
+++ b/media-sound/esound/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/esound
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/esound/ChangeLog,v 1.9 2002/06/07 19:38:28 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/esound/ChangeLog,v 1.10 2002/06/19 16:32:49 stroke Exp $
+
+*esound-0.2.28 (19 Jun 2002)
+  19 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> :
+  New version.
 
 *esound-0.2.27 (07 Jun 2002)
   07 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
