--- a/gnome-base/bonobo-activation/ChangeLog
+++ b/gnome-base/bonobo-activation/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/bonobo-activation
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.5 2002/06/04 08:59:03 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.6 2002/06/19 17:00:44 stroke Exp $
+
+*bonobo-activation-1.0.1 (19 Jun 2002)
+
+  19 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> bonobo-activation-1.0.1.ebuild:
+
+  New version.
+
 
 bonobo-activation-1.0.0-r1 (04 Jun 2002)
 
