--- a/app-text/pspell/ChangeLog
+++ b/app-text/pspell/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/pspell
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/pspell/ChangeLog,v 1.2 2002/04/02 23:35:53 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/pspell/ChangeLog,v 1.3 2002/06/19 21:33:47 seemant Exp $
+
+*pspell-0.12.2-r3 (19 Jun 2002)
+
+  19 Jun 2002; Seemant Kulleen <seemant@gentoo.org> pspell-0.12.2-r3.ebuild
+  files/digest-pspell-0.12.2-r3 :
+
+  elibtoolized -- now it works again when sylpheed-claws needs it.
 
 *pspell-0.12.2-r2 (3 Apr 2002)
 
