--- a/app-text/pspell/ChangeLog
+++ b/app-text/pspell/ChangeLog
@@ -1,13 +1,14 @@
 # ChangeLog for app-text/pspell
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/pspell/ChangeLog,v 1.3 2002/06/19 21:33:47 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/pspell/ChangeLog,v 1.4 2002/06/19 21:34:16 seemant Exp $
 
 *pspell-0.12.2-r3 (19 Jun 2002)
 
   19 Jun 2002; Seemant Kulleen <seemant@gentoo.org> pspell-0.12.2-r3.ebuild
   files/digest-pspell-0.12.2-r3 :
 
-  elibtoolized -- now it works again when sylpheed-claws needs it.
+  elibtoolized -- now it works again when sylpheed-claws needs it.  Fixes
+  bug #3810 by mtzanidakis@freemail.gr (Manolis Tzanidakis)
 
 *pspell-0.12.2-r2 (3 Apr 2002)
 
