--- a/dev-util/glademm/ChangeLog
+++ b/dev-util/glademm/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for dev-util/glademm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/glademm/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/glademm/ChangeLog,v 1.2 2002/06/20 00:07:23 spider Exp $
 
+*glademm-1.1.0c (19 Jun 2002)
+  19 Jun 2002; Spider <spider@gentoo.org> glademm-1.1.0c.ebuild :
+  glade-- development branch :) 
+  
 *glademm-0.6.2 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
