--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,7 +1,10 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.9 2002/06/05 16:18:02 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.10 2002/06/20 00:47:04 spider Exp $
 
+*control-center-2.0.0 ( 19 Jun 2002)
+  19 Jun 2002; Spider <spider@gentoo.org> ; control-center-2.0.0.ebuild :
+  just noted this one on ftp, updating ebuild
 
 *control-center-1.4.0.5-r1 (05 Jun 2002) 
   05 Jun 2002; Spider <spider@gentoo.org> ; control-center-1.4.0.5-r1.ebuild :
