--- a/app-text/chktex/ChangeLog
+++ b/app-text/chktex/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/chktex
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/chktex/ChangeLog,v 1.2 2002/06/07 11:06:30 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/chktex/ChangeLog,v 1.3 2002/06/29 01:54:10 seemant Exp $
+
+*cktex-1.5-r2 (28 Jun 2002)
+
+  28 Jun 2002; Seemant Kulleen <seemant@gentoo.org> chktex-1.5-r2.ebuild
+  files/digest-chktex-1.5-r2 :
+
+  LFH/man page fixes
 
 *chktex-1.5-r1 (7 Jun 2002)
 
