--- a/media-sound/esound/ChangeLog
+++ b/media-sound/esound/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/esound
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/esound/ChangeLog,v 1.10 2002/06/19 16:32:49 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/esound/ChangeLog,v 1.11 2002/06/29 02:20:00 seemant Exp $
+
+*esound-0.2.28-r1 (28 Jun 2002)
+
+  28 Jun 2002; Seemant Kulleen <seemant@gentoo.org> esound-0.2.28-r1.ebuild
+  files/digest-esound-0.2.28-r1 :
+
+  LFH/man page fixes and elibtoolize
 
 *esound-0.2.28 (19 Jun 2002)
   19 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> :
