--- a/net-mail/sendmail/ChangeLog
+++ b/net-mail/sendmail/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/sendmail/ChangeLog,v 1.5 2002/06/27 16:29:56 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/sendmail/ChangeLog,v 1.6 2002/06/29 12:36:37 seemant Exp $
+
+  29 Jun 2002; Seemant Kulleen <seemant@gentoo.org> sendmail-8.12.4-r2.ebuild:
+
+  Changed net-misc/hesiod to net-dns/hesiod per bug #4321 by 
+  simons+gentoo@cryp.to (Peter Simons)
 
   27 Jun 2002; Grant Goodyear <g2boojum@gentoo.org> sendmail-8.12.4-r2.ebuild:
   
