--- a/sys-apps/lsof/ChangeLog
+++ b/sys-apps/lsof/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/lsof
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/lsof/ChangeLog,v 1.1 2002/02/01 21:53:37 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lsof/ChangeLog,v 1.2 2002/06/29 13:12:55 seemant Exp $
+
+*lsof-4.64 (29 Jun 2002)
+
+  29 Jun 2002; Seemant Kulleen <seemant@gentoo.org> lsof-4.64.ebuild
+  files/digest-lsof-4.64 :
+  
+  Version bump (old version's tarball does not even exist at SRC_URI).
+  thanks to: paidhi@mospheira.net in bug #4310
 
 *lsof-4.60-r1 (1 Feb 2002)
 
