--- a/app-emulation/winex/ChangeLog
+++ b/app-emulation/winex/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/wine
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/winex/ChangeLog,v 1.1 2002/05/11 08:33:24 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/winex/ChangeLog,v 1.2 2002/06/29 22:30:13 bass Exp $
+
+*winex-20020728 (28 Jun 2002)
+
+  28 Jun 2002; J.Alberto Suárez L. <bass@gentoo.org> winex-20020728.ebuild
+
+  New CVS version
 
 *winex-20020511 (11 May 2002)
 
