--- a/net-analyzer/ethereal/ChangeLog
+++ b/net-analyzer/ethereal/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/ethereal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ethereal/ChangeLog,v 1.8 2002/06/29 19:30:01 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ethereal/ChangeLog,v 1.9 2002/06/30 03:06:55 lostlogic Exp $
+
+*ethereal-0.9.5-r2 (29 Jun 2002)
+
+  29 Jun 2002; Brandon Low <lostlogic@gentoo.org> ethereal-0.9.5-r2.ebuild:
+
+  GCC-3.1 configure fix
 
 *ethereal-0.9.5-r1 (29 Jun 2002)
 
