--- a/gnome-extra/gnome2-user-docs/ChangeLog
+++ b/gnome-extra/gnome2-user-docs/ChangeLog
@@ -1,7 +1,12 @@
 # ChangeLog for gnome-extra/gnome2-user-docs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome2-user-docs/ChangeLog,v 1.1 2002/06/22 03:40:13 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome2-user-docs/ChangeLog,v 1.2 2002/06/30 03:11:37 spider Exp $
 
+
+gnome2-user-docs-1.93-r1 (30 Jun 2002)
+  30 Jun 2002; Spider <spider@gentoo.org> gnome2-user-docs-1.93-r1.ebuild:
+  fixed so it appears in yelp correctly, yey!
+  
 *gnome2-user-docs-1.93 (21 Jun 2002)
   21 Jun 2002; Spider <spider@gentoo.org> gnome2-user-docs-1.93.ebuild:
   for the first time this package builds, so here you are, a blazing set of documentation for all of you gnome2 fans ;)
