--- a/sys-apps/bzip2/ChangeLog
+++ b/sys-apps/bzip2/ChangeLog
@@ -1,27 +1,23 @@
 # ChangeLog for sys-apps/bzip2
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/bzip2/ChangeLog,v 1.3 2002/03/21 11:42:16 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/bzip2/ChangeLog,v 1.4 2002/06/30 04:54:55 drobbins Exp $
+
+*bzip2-1.0.2-r2 (29 Jun 2002)
+
+  29 Jun 2002; Daniel Robbins <drobbins@gentoo.org> : new rev of bzip2 that
+  uses user-defined CFLAGS, but keeps existing "-fomit-frame-pointer" and
+  "-fno-strength-reduce" options.
 
 *bzip2-1.0.2-r1 (21 Mar 2002)
 
   21 Mar 2002; Seemant Kulleen <seemant@gentoo.org> bzip2-1.0.2-r1.ebuild :
-
   HTML documentation does not get gzipped any more.  Thanks to
   stefan@mdy.univie.ac.at for pointing this out.
 
 *bzip2-1.0.2 (2 Feb 2002)
 
-  2 Feb 2002; M.Schlemmer <azarah@gentoo.org> bzip2-1.0.2.ebuild :
-
-  Redo ebuild not to use the patches, as it makes things difficult between
-  versions.  Updated.
+  2 Feb 2002; M.Schlemmer <azarah@gentoo.org> bzip2-1.0.2.ebuild : Redo ebuild
+  not to use the patches, as it makes things difficult between versions.
+  Updated.
 
 *bzip2-1.0.1-r4 (1 Feb 2002)
-
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
