--- a/media-sound/xmms/ChangeLog
+++ b/media-sound/xmms/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for media-sound/xmms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/ChangeLog,v 1.20 2002/06/28 02:11:38 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/ChangeLog,v 1.21 2002/06/30 15:21:07 azarah Exp $
 
+xmms-1.2.7-r11 (30 Jun 2002)
+
+  30 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
+  This revision tries to fix all the automake/autoconf warning, etc.
+  I have tested it with gcc-2.95.3 and gcc-3.1, so hopefully it will
+  be the last revision for some time.
 
 xmms-1.2.7-r10 (28 Jun 2002)
   28 Jun 2002; Spider <spider@gentoo.org> xmms-1.2.7-r9.ebuild :
