--- a/gnome-base/gnome-core/ChangeLog
+++ b/gnome-base/gnome-core/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gnome-core
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-core/ChangeLog,v 1.10 2002/06/28 10:48:15 trance Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-core/ChangeLog,v 1.11 2002/06/30 17:52:05 azarah Exp $
+
+*gnome-core-1.4.1 (30 Apr 2002)
+  
+  30 Jun 2002; M.Schlemmer <azarah@gentoo.org> :
+  Version update.
 
 *gnome-core-1.4.0.8 (29 Apr 2002)
 
