--- a/net-news/pan/ChangeLog
+++ b/net-news/pan/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-news/pan
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-news/pan/ChangeLog,v 1.10 2002/06/23 12:37:03 stroke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/pan/ChangeLog,v 1.11 2002/06/30 23:55:35 stroke Exp $
+
+*pan-0.12.0-r2 (01 Jul 2002)
+
+  01 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> pan-0.12.0-r2.ebuild:
+
+  Fixed a problem with the libxml-2 dependence. Closes bug #4368  
+
 
 *pan-0.12.0-r1 (23 Jun 2002)
 
