--- a/media-sound/soundtracker/ChangeLog
+++ b/media-sound/soundtracker/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/soundtracker
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/soundtracker/ChangeLog,v 1.2 2002/03/27 10:39:47 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/soundtracker/ChangeLog,v 1.3 2002/07/01 04:05:51 blocke Exp $
+
+*soundtracker-0.6.6 (01 Jul 2002)
+
+  01 Jul 2002; Bruce A. Locke <blocke@shivan.org> soundtracker-0.6.6.ebuild:
+
+  Version bump and gnome-core dep removal
 
 *soundtracker-0.6.4-r2 (27 Mar 2002)
 
