--- a/net-irc/erc/ChangeLog
+++ b/net-irc/erc/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/erc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-irc/erc/ChangeLog,v 1.2 2002/06/18 20:58:27 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/erc/ChangeLog,v 1.3 2002/07/01 08:17:31 seemant Exp $
+
+*erc-2.93 (1 Jul 200)
+
+  1 Jul 2002; Seemant Kulleen <seemant@gentoo.org> erc-2.93.ebuild :
+
+  fixed ${S}'s value.  Closes bug #4372 by boyens@iastate.edu (JR Boyens) 
 
 *erc-2.93 (18 Jun 2002)
 
