--- a/net-print/gimp-print-cups/ChangeLog
+++ b/net-print/gimp-print-cups/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-print/gimp-print-cups
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-print/gimp-print-cups/ChangeLog,v 1.5 2002/06/28 23:50:09 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/gimp-print-cups/ChangeLog,v 1.6 2002/07/01 09:20:10 seemant Exp $
+
+*gimp-print-cups-4.3.0-r2 (1 Jul 2002)
+
+  1 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
+  gimp-print-cups-4.3.0-r2.ebuild files/digest-gimp-print-cups-4.3.0-r2 :
+
+  In a move to debloat, vapier@netzero.com (SpanKY) submitted bug #4335
+  which showed how GTK can be made into an optional dependency
 
 *gimp-print-cups-4.3.0-r1 (28 Jun 2002)
 
