--- a/gnome-extra/gnome-pilot/ChangeLog
+++ b/gnome-extra/gnome-pilot/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/gnome-pilot
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-pilot/ChangeLog,v 1.6 2002/05/27 14:28:35 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-pilot/ChangeLog,v 1.7 2002/07/01 23:49:29 blocke Exp $
+
+*gnome-pilot-0.1.65-r3 (01 Jul 2002)
+
+  01 Jul 2002; Bruce A. Locke <blocke@shivan.org> gnome-pilot-0.1.65-r3.ebuild:
+
+  Switched gnome-core dependency to gnome-libs and gnome-panel (gnome 1.4)
 
 *gnome-pilot-0.1.65-r2 (27 May 2002)
 
