--- a/net-mail/balsa/ChangeLog
+++ b/net-mail/balsa/ChangeLog
@@ -1,7 +1,12 @@
 # ChangeLog for net-mail/balsa
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.15 2002/06/18 01:47:39 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/balsa/ChangeLog,v 1.16 2002/07/02 01:55:07 stroke Exp $
 
+balsa-2.0.1-r1 (02 Jul 2002)
+  02 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> balsa-2.0.1-r1.ebuild :
+  Added workaround for bug #4095, it replaces the varmail patch which has
+  been removed. (Closes bug #4095)
+  Updated deps.
 
 *balsa-2.0.1 (17 Jun 2002)
   17 Jun 2002; Spider< spider @gentoo.org> balsa-2.0.1.ebuild :
