--- a/sys-apps/pcmcia-cs/ChangeLog
+++ b/sys-apps/pcmcia-cs/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for sys-apps/pcmcia-cs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.12 2002/06/09 06:21:25 gerk Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.13 2002/07/02 02:55:29 chadh Exp $
+
+*pcmcia-cs-3.1.34 (01 July 2002)
+
+  01 July 2002; Chad Huneycutt <chadh@gentoo.org>
+
+  Updated orinoco drivers to version 0.12
+
+*pcmcia-cs-3.1.34 (01 July 2002)
+
+  01 July 2002; Chad Huneycutt <chadh@gentoo.org>
+
+  New version.
 
 *pcmcia-cs-3.1.33-r5 (09 June 2002)
 
