--- a/app-editors/xemacs-gtk/ChangeLog
+++ b/app-editors/xemacs-gtk/ChangeLog
@@ -1,7 +1,16 @@
 # ChangeLog for app-editors/xemacs-gtk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs-gtk/ChangeLog,v 1.3 2002/05/31 23:42:51 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/xemacs-gtk/ChangeLog,v 1.4 2002/07/02 05:26:21 mkennedy Exp $
 
+*xemacs-gtk-21.4.8-r2 (1 Jul 2002)
+
+  1 Jul 2002; Matthew Kennedy <mkennedy@gentoo.org>
+  xemacs-gtk-21.4.8-r2.ebuild, files/digest-xemacs-gtk-21.4.8-r2,
+  ChangeLog :
+
+  Updated mule-base, xemacs-base, efs to latest versions. Fixed mule
+  flag bug.
+	
 *xemacs-gtk-21.4.8-r1 (31 May 2002)
 
   31 May 2002; Matthew Kennedy <mkennedy@gentoo.org>
