--- a/sys-apps/pcmcia-cs/ChangeLog
+++ b/sys-apps/pcmcia-cs/ChangeLog
@@ -1,16 +1,18 @@
 # ChangeLog for sys-apps/pcmcia-cs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.13 2002/07/02 02:55:29 chadh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.14 2002/07/02 13:11:14 chadh Exp $
 
 *pcmcia-cs-3.1.34 (01 July 2002)
 
-  01 July 2002; Chad Huneycutt <chadh@gentoo.org>
+  02 July 2002; Chad Huneycutt <chadh@gentoo.org> pcmcia-cs-3.1.34-r2.ebuild
+
+  Well, it appears that there is bug in cardmgr.  This is an attempted fix.
+
+  01 July 2002; Chad Huneycutt <chadh@gentoo.org> pcmcia-cs-3.1.34-r1.ebuild
 
   Updated orinoco drivers to version 0.12
 
-*pcmcia-cs-3.1.34 (01 July 2002)
-
-  01 July 2002; Chad Huneycutt <chadh@gentoo.org>
+  01 July 2002; Chad Huneycutt <chadh@gentoo.org> pcmcia-cs-3.1.34.ebuild
 
   New version.
 
