--- a/dev-perl/Mail-SpamAssassin/ChangeLog
+++ b/dev-perl/Mail-SpamAssassin/ChangeLog
@@ -1,5 +1,13 @@
-# ChangeLog for dev-perl/Net-DNS
+# ChangeLog for dev-perl/Mail-SpamAssassin
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SpamAssassin/ChangeLog,v 1.3 2002/07/02 16:16:05 g2boojum Exp $
+
+*Mail-SpamAssassin-2.31-r1 (02 Jul 2002)
+
+  02 Jul 2002; Grant Goodyear <g2boojum@gentoo.org> ChangeLog  :
+
+  added Time-HiRes dep
+# ChangeLog for dev-perl/Net-DNS
 # /space/gentoo/cvsroot/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.2 2002/05/05 18:47:51 seemant Exp
 
 *Mail-SpamAssassin-2.31 (28 Jun 2002)
