--- a/x11-wm/WindowMaker/ChangeLog
+++ b/x11-wm/WindowMaker/ChangeLog
@@ -1,13 +1,13 @@
 # ChangeLog for x11-wm/WindowMaker
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/WindowMaker/ChangeLog,v 1.8 2002/07/02 11:44:47 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/WindowMaker/ChangeLog,v 1.9 2002/07/02 16:50:36 seemant Exp $
 
 *WindowMaker-0.80.1 (02 Jul 2002)
 
  02 Jul 2002; Seemant Kulleen <seemant@gentoo.org> WindowMaker-0.80.1.ebuild
  files/digest-WindowMaker-0.80.1 :
 
- Version bump.
+ Version bump.  Removed Taiwanese translations installation.
 
 *WindowMaker-0.80.0-r3 (10 May 2002)
   10 May 2002; José Alberto Suárez López <bass@gentoo.org> WindowMaker-0.80.0-r3.ebuild :
