--- a/dev-ruby/rexml/ChangeLog
+++ b/dev-ruby/rexml/ChangeLog
@@ -1,10 +1,16 @@
 # ChangeLog for dev-ruby/rexml
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexml/ChangeLog,v 1.2 2002/06/17 08:17:41 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rexml/ChangeLog,v 1.3 2002/07/02 18:06:49 rphillips Exp $
 
+*rexml-2.3.7 (02 Jul 2002)
+
+  02 Jul 2002; Ryan Phillips <rphillips@gentoo.org> rexml-2.3.7 files/digest-rexml-2.3.7 :
+
+  New Version. Fixes #4381
+  
 *rexml-2.3.5 (17 Jun 2002)
 
-  17 Jun 2002; Ryan Phillips <rphillips@gentoo.org> rexml-1.2.5 files/digest-rexml-1.2.5 :
+  17 Jun 2002; Ryan Phillips <rphillips@gentoo.org> rexml-2.3.5 files/digest-rexml-2.3.5 :
 
   Updated package revision. Fixes #3799
   
