--- a/net-im/ymessenger/ChangeLog
+++ b/net-im/ymessenger/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/ymessenger
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/ymessenger/ChangeLog,v 1.2 2002/06/27 12:01:45 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ymessenger/ChangeLog,v 1.3 2002/07/03 02:06:08 owen Exp $
+
+*ymessenger-0.99.19-r2 (02 Jul 2002)
+  02 Jul 2002; Owen Stampflee <owen@gentoo.org>
+  Fixed the fetch restriction and added a clause where it will einfo and die
+  on non-x86 machines.
 
 *ymessenger-0.99.19 (27 Jun 2002)
 
