--- a/net-im/ymessenger/ChangeLog
+++ b/net-im/ymessenger/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-im/ymessenger
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/ymessenger/ChangeLog,v 1.3 2002/07/03 02:06:08 owen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ymessenger/ChangeLog,v 1.4 2002/07/03 02:31:41 seemant Exp $
+*ymessenger-0.99.19-r2 (02 Jul 2002)
+
+  02 Jul 2002; Seemant Kulleen <seemant@gentoo.org>
+  ymessenger-0.99.19-r2.ebuild files/digest-ymessenger-0.99.19-r2 :
+
+  Removed -r2, because yahoo has not confirmed the legality of unrestricted
+  fetch, and this should have been -r1 anyway.
 
 *ymessenger-0.99.19-r2 (02 Jul 2002)
   02 Jul 2002; Owen Stampflee <owen@gentoo.org>
