--- a/dev-python/wxPython/ChangeLog
+++ b/dev-python/wxPython/ChangeLog
@@ -1,12 +1,18 @@
 # ChangeLog for dev-python/wxPython
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-python/wxPython/ChangeLog,v 1.2 2002/04/12 17:08:00 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/wxPython/ChangeLog,v 1.3 2002/07/03 03:41:16 jnelson Exp $
 
+*wxPython-2.3.2.1-r1 (2 Jul 2002)
+
+  2 Jul 2002; Jon Nelson <jnelson@gentoo.org> wxPython-2.3.2.1-r1:
+  Make lintool happy
+  expressly don't build GLCANVAS  
 
 *wxPython-2.3.2.1 (11 Apr 2002)
+
   11 Apr 2002; Spider <spider@gentoo.org>
   Update all glib dependencies to use glib-1.2*  in preparation of
-unmasking the glib-2.0.1 packages
+  unmasking the glib-2.0.1 packages
 
 *wxPython-2.3.2.1 (1 Feb 2002)
 
