--- a/net-misc/host/ChangeLog
+++ b/net-misc/host/ChangeLog
@@ -1,10 +1,12 @@
 # ChangeLog for net-misc/host
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 # Maintainer: George Shapovalov <george@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/net-misc/host/ChangeLog,v 1.2 2002/05/12 04:49:35 george Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/host/ChangeLog,v 1.3 2002/07/07 07:56:03 phoenix Exp $
 
 *host-991529,  (10 May 2002)
 
-  11 May 2002; G Shapovalov <george@gentoo.org> host-991529 :
+  06 Jul 2002; phoen][x <phoenix@gentoo.org> host-991529.ebuild :
+  Added KEYWORDS, LICENSE, SLOT.
 
+  11 May 2002; G Shapovalov <george@gentoo.org> host-991529.ebuild :
   initial release
