--- a/media-sound/mad/ChangeLog
+++ b/media-sound/mad/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/mad
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mad/ChangeLog,v 1.2 2002/03/12 22:44:18 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mad/ChangeLog,v 1.3 2002/07/07 19:22:51 gerk Exp $
+
+*mad-0.14.2b-r2 (7 July 2002)
+
+  7 Jul 2002; Mark Guertin <gerk@gentoo.org> Changelog :
+
+  Added case ARCH to set proper ARCH in configure options
 
 *mad-0.14.2b (12 Mar 2002)
 
