--- a/net-www/mozilla/ChangeLog
+++ b/net-www/mozilla/ChangeLog
@@ -1,12 +1,18 @@
 # ChangeLog for net-www/mozilla
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.24 2002/06/24 23:05:28 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.25 2002/07/07 21:24:27 azarah Exp $
+
+*mozilla-1.0-r3 (7 Jul 2002)
+
+  7 Jul 2002; Martin Schlemmer <azarah@gentoo.org> mozilla-1.0-r3 :
+  Add gcc-3.1.1 support.  Add support for at least the flash and realmedia
+  plugins.  Add gtk2 support.
 
   26 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
   Add support to set NO_MAIL=YES to disable the mail and news components.
   This hopefully resolves bug #3575.
 
-mozilla-1.0-r2 (7 Jun 2002)
+*mozilla-1.0-r2 (7 Jun 2002)
   7 Jun 2002; Spider <spider@gentoo.org> :
   modify the gtk+ dependencies. we dont want gtk2 deps just yet.
 
