--- a/dev-libs/commonc++/ChangeLog
+++ b/dev-libs/commonc++/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/commonc++/ChangeLog,v 1.1 2002/07/05 19:45:51 naz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/commonc++/ChangeLog,v 1.2 2002/07/08 00:38:49 naz Exp $
+
+*commonc++-1.9.7 (07 Jul 2002)
+  07 Jul 2002; Michael Nazaroff <naz@gentoo.org> commonc++-1.9.7:
+  Added a small patch so it compiles since it was broke before.
+  I also added license and slot to the ebuild and included the doc's along with
+  the ebuild.
 
 *commonc++-1.9.7 (05 Jul 2002)
 
