--- a/dev-ruby/mod-ruby/ChangeLog
+++ b/dev-ruby/mod-ruby/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-ruby/mod-ruby
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mod-ruby/ChangeLog,v 1.1 2002/03/10 23:01:11 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mod-ruby/ChangeLog,v 1.2 2002/07/08 01:52:37 agriffis Exp $
 
 *mod-ruby-0.9.7 ( 10 Mar 2002 )
 
@@ -10,4 +10,6 @@
   Ruby CGI scripts to be executed natively. These scripts will start up much
   faster than without mod_ruby.
 
+  07 Jul 2002; Aron Griffis <agriffis@gentoo.org> mod-ruby-0.9.7.ebuild:
 
+  Updated with LICENSE, KEYWORDS, SLOT.
