--- a/dev-ruby/ri/ChangeLog
+++ b/dev-ruby/ri/ChangeLog
@@ -1,13 +1,24 @@
 # ChangeLog for dev-ruby/ri
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ri/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ri/ChangeLog,v 1.2 2002/07/08 01:57:47 agriffis Exp $
+
+*ri-0.8a (07 Jul 2002)
+
+	07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ri-0.8a.ebuild:
+
+	Updated to 0.8a.
 
 *ri-0.7a (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+	1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
+	
+	Added initial ChangeLog which should be updated whenever the package is
+	updated in any way. This changelog is targetted to users. This means that
+	the comments should well explained and written in clean English. The
+	details about writing correct changelogs are explained in the
+	skel.ChangeLog file which you can find in the root directory of the
+	portage repository.
+
+	07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ri-0.7a.ebuild:
+	
+	Added LICENSE, KEYWORDS, SLOT.
