--- a/dev-ruby/ruby-gconf/ChangeLog
+++ b/dev-ruby/ruby-gconf/ChangeLog
@@ -1,12 +1,16 @@
 # ChangeLog for dev-ruby/ruby-gconf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gconf/ChangeLog,v 1.2 2002/04/22 01:07:15 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gconf/ChangeLog,v 1.3 2002/07/08 02:05:05 agriffis Exp $
 
 *ruby-gconf-0.2 (21 Apr 2002)
 
 	21 Apr 2002; Aron Griffis <agriffis@gentoo.org> ruby-gconf-0.2.ebuild:
 
 	Updated to version 0.2
+	
+	07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-gconf-0.2.ebuild:
+
+	Added LICENSE, KEYWORDS, SLOT.
 
 *ruby-gconf-0.1 (1 Feb 2002)
 
