--- a/dev-ruby/ruby-dbi/ChangeLog
+++ b/dev-ruby/ruby-dbi/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-ruby/ruby-dbi
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-dbi/ChangeLog,v 1.2 2002/06/21 23:25:07 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-dbi/ChangeLog,v 1.3 2002/07/08 02:43:55 agriffis Exp $
 
 *ruby-dbi-0.0.15 (21 Jun 2002)
 
@@ -8,9 +8,11 @@
 
   New version
 
-*ruby-dbi-0.0.13 (24 Apr 2002)
+  07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-dbi-0.0.15.ebuild:
 
-  24 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ruby-dbi-0.0.13.ebuild files/digest-ruby-dbi-0.0.13 :
+  Added LICENSE, KEYWORDS, SLOT.
+
+*ruby-dbi-0.0.13 (24 Apr 2002)
 
   24 Apr 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ruby-dbi-0.0.13.ebuild files/digest-ruby-dbi-0.0.13 :
   
@@ -18,3 +20,7 @@
   similar to Perl's DBI.
 
   Ebuild submitted by Geert Bevin <gbevin@uwyn.com>.
+
+  07 Jul 2002; Aron Griffis <agriffis@gentoo.org> ruby-dbi-0.0.13.ebuild:
+
+  Added LICENSE, KEYWORDS, SLOT.
