--- a/media-libs/jpeg-mmx/ChangeLog
+++ b/media-libs/jpeg-mmx/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for media-libs/jpeg-mmx
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg-mmx/ChangeLog,v 1.1 2002/02/01 21:53:30 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg-mmx/ChangeLog,v 1.2 2002/07/08 03:39:49 spider Exp $
 
+
+*jpeg-mmx-1.1.2-r1 (08 Jul 2002)
+  08 Jul 2002; Spider <spider@gentoo.org> jpeg-mmx-1.1.2-r1.ebuild :
+  change so the .la file doesn't contain the ${D} path.
+  update to latest portage rules
+  
 *jpeg-mmx-1.1.2 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
