--- a/dev-util/gnustep-base/ChangeLog
+++ b/dev-util/gnustep-base/ChangeLog
@@ -1,18 +1,27 @@
 # ChangeLog for dev-util/gnustep-base
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # Author Nick Hadaway <raker@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gnustep-base/ChangeLog,v 1.2 2002/07/05 06:05:51 raker Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gnustep-base/ChangeLog,v 1.3 2002/07/08 05:13:15 raker Exp $
 
-#gnustep-base-1.3.4 (05 Jul 2002)
+*gnustep-base-1.1.0 (07 Jul 2002)
+
+  07 Jul 2002; Nick Hadaway <raker@gentoo.org> gentoo-base-1.1.0.ebuild:
+  Back to the stable version.  Cleaned up the ebuild and should now install
+  properly.
+
+*gnustep-base-1.3.4 (05 Jul 2002)
+
   05 Jul 2002; Nick Hadaway <raker@gentoo.org> gentoo-base-1.3.4.ebuild:
   Updated to the 1.3.4 package.  libxml2 now appears to be detected.
   Currently fails compiling, so masked in package.mask
 
-#gnustep-base-1.3.3 (04 Jul 2002)
+*gnustep-base-1.3.3 (04 Jul 2002)
+
   04 Jul 2002; Nick Hadaway <raker@gentoo.org> gentoo-base-1.3.3.ebuild:
   Updated to the 1.3.3 package.  libxml2 is currently not detected correctly.
 
 *gnustep-base-1.1.0 (04 Jul 2002)
+
   04 Jul 2002; Nick Hadaway <raker@gentoo.org> gentoo-base-1.1.0.ebuild:
   This is the first ebuild for this package.  The GNUstep base package.
 
