--- a/sys-kernel/xfs-sources/ChangeLog
+++ b/sys-kernel/xfs-sources/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for <CATEGORY>/<PACKAGE_NAME>
+# ChangeLog for sys-kernel/xfs-sources
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/xfs-sources/ChangeLog,v 1.1 2002/04/29 06:29:21 sandymac Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/xfs-sources/ChangeLog,v 1.2 2002/07/08 13:47:25 seemant Exp $
 
   29 apr 2002; William McArthur <sandymac@gentoo.org> xfs-sources-2.4.18.ebuild:
 
